--- a/main.html
+++ b/main.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
 <head>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body> -->
 	<!-- the entire body must be written by student -->
-	<div class="progress-bar">
-		
+	<!-- <div class="progress-bar">
+		 -->
 		<!-- First circle -->
-		<div class="circle" id="circle-1">1</div>
+		<!-- <div class="circle" id="circle-1">1</div>
 		<div class="line"></div>
-		
+		 -->
 		<!-- second circle  -->
-		<div class="circle" id="circle-2">2</div>
+		<!-- <div class="circle" id="circle-2">2</div>
 		<div class="line"></div>
-		
+		 -->
 		<!-- third circle -->
-		<div class="circle" id="circle-3">3</div>
+		<!-- <div class="circle" id="circle-3">3</div>
 		<div class="line"></div>
-		
+		 -->
 		<!-- fourth circle -->
-		<div class="circle" id="circle-4">4</div>
+		<!-- <div class="circle" id="circle-4">4</div>
 		<div class="line"></div>
-		
+		 -->
 		<!-- fifth circle -->
-		<div class="circle" id="circle-5">5</div>
+		<!-- <div class="circle" id="circle-5">5</div>
 		
 	</div>
 	<div class = "btn-container">
@@ -35,5 +35,31 @@
     <script type="text/javascript" src="index.js">
 </script>
 
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="progress-bar">
+        <div class="circle active" id="circle-1">1</div>
+        <div class="line"></div>
+        <div class="circle" id="circle-2">2</div>
+        <div class="line"></div>
+        <div class="circle" id="circle-3">3</div>
+        <div class="line"></div>
+        <div class="circle" id="circle-4">4</div>
+        <div class="line"></div>
+        <div class="circle" id="circle-5">5</div>
+    </div>
+    <div class="btn-container">
+        <button id="prev" disabled>Prev</button>
+        <button id="next">Next</button>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
