--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="progress-bar">
-        <div class="circle active" id="circle-1">1</div>
+        <div class="circle" id="circle-1">1</div>
         <div class="line"></div>
         <div class="circle" id="circle-2">2</div>
         <div class="line"></div>
